--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <head>
+
+    </head>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
