--- a/index.html
+++ b/index.html
@@ -1,20 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <head>
-
-    </head>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TechTuc</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/82f0997eec.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="navbar">
+        <div class="logo"><img src="/img/logo2.0.jpg" alt="" /></div>
+        <ul class="links">
+          <li><a href="">Home</a></li>
+          <li><a href="">Acerca de nosotros</a></li>
+          <li><a href="">Contactos</a></li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Categorias
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Sillas Gamer</a></li>
+              <li><a class="dropdown-item" href="#">Pc gamer</a></li>
+              <li><a class="dropdown-item" href="#">Componentes</a></li>
+            </ul>
+          </li>
+        </ul>
+        <a href="" class="action-btn">Login</a>
+        <div class="toggle-btn" onclick="openMenu()">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+      <div class="dropdown_menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">Acerca de nosotros</a></li>
+        <li><a href="">Contactos</a></li>
+        <li><a href="" class="action-btn">Login</a></li>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/app.js"></script>
+  </body>
 </html>
