--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="navbar">
         <div class="logo"><img src="/img/logo2.0.jpg" alt="" /></div>
         <ul class="links">
-          <li><a href="">Home</a></li>
-          <li><a href="">Acerca de nosotros</a></li>
-          <li><a href="">Contactos</a></li>
+          <li><a href="" class="info">About us</a></li>
+          <li><a href="" class="info">Contacto</a></li>
+          <li><a href="" class="info">Ver mi carrito</a></li>
           <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle text-white"
               href="#"
               role="button"
               data-bs-toggle="dropdown"
@@ -47,9 +47,9 @@
         </div>
       </div>
       <div class="dropdown_menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Acerca de nosotros</a></li>
-        <li><a href="">Contactos</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">Contactanos</a></li>
+        <li><a href="">Ver mi carrito</a></li>
         <li><a href="" class="action-btn">Login</a></li>
       </div>
     </header>
