--- a/index.html
+++ b/index.html
@@ -19,27 +19,11 @@
   <body>
     <header>
       <div class="navbar">
-        <div class="logo"><img src="/img/logo2.0.jpg" alt="" /></div>
+        <div class="logo"><img src="/img/logo/logo2.0.jpg" alt="" /></div>
         <ul class="links">
           <li><a href="" class="info">About us</a></li>
           <li><a href="" class="info">Contacto</a></li>
           <li><a href="" class="info">Ver mi carrito</a></li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle text-white"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Categorias
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sillas Gamer</a></li>
-              <li><a class="dropdown-item" href="#">Pc gamer</a></li>
-              <li><a class="dropdown-item" href="#">Componentes</a></li>
-            </ul>
-          </li>
         </ul>
         <a href="" class="action-btn">Login</a>
         <div class="toggle-btn" onclick="openMenu()">
@@ -53,7 +37,54 @@
         <li><a href="" class="action-btn">Login</a></li>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container">
+        <div class="col-12">
+          <div class="row-col-1 row-cols-sm-1 mt-4">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="500">
+                  <a href=""><img src="/img/1.jpg" class="d-block w-100" alt="..."></a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                  </div>
+                </div>
+                <div class="carousel-item active" data-bs-interval="1000">
+                  <a href=""><img src="/img/2.jpg" class="d-block w-100" alt="..."></a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <a href=""><img src="/img/3.jpg" class="d-block w-100" alt="..."></a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
