--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <body>
     <header>
       <div class="navbar">
-        <div class="logo"><img src="/img/logo/logo2.0.jpg" alt="" /></div>
+        <div class="logo"><img src="/img/logo/logo-proyecto-2.png" alt="" /></div>
         <ul class="links">
           <li><a href="" class="info">About us</a></li>
-          <li><a href="" class="info">Contacto</a></li>
+          <li><a href="" class="info">Administracion</a></li>
           <li><a href="" class="info">Ver mi carrito</a></li>
         </ul>
         <a href="" class="action-btn">Login</a>
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container-fluid" id="carousel">
         <div class="col-12">
           <div class="row-col-1 row-cols-sm-1 mt-4">
             <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -80,10 +80,16 @@
               </button>
             </div>
           </div>
-
         </div>
-
       </div>
+      <div class="container">
+        <div class="row my-2 text-center">
+          <h2 class="text-white fw-bold">Nuestros productos!</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3" id="contenedor">
+        </div>
+      </div>
+      
     </main>
     <footer></footer>
     <script
