--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
     <script src="/app.js"></script>
   </body>
 </html>
