Primer prototipo de pagina principal

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <body>
     <header>
       <div class="navbar">
-        <div class="logo"><img src="/img/logo/logo-proyecto-2.png" alt="" /></div>
+        <div class="logo"> <a href="/index.html"><img src="/img/logo/logo-proyecto-2.png" alt="" /></a></div>
         <ul class="links">
           <li><a href="" class="info">About us</a></li>
           <li><a href="" class="info">Administracion</a></li>
-          <li><a href="" class="info">Ver mi carrito</a></li>
+          <li><a href="/pages/Carrito.html" class="info">Ver mi carrito</a></li>
         </ul>
         <a href="" class="action-btn">Login</a>
         <div class="toggle-btn" onclick="openMenu()">
@@ -32,7 +32,7 @@
       </div>
       <div class="dropdown_menu">
         <li><a href="">About us</a></li>
-        <li><a href="">Contactanos</a></li>
+        <li><a href="">Administracion</a></li>
         <li><a href="">Ver mi carrito</a></li>
         <li><a href="" class="action-btn">Login</a></li>
       </div>
@@ -87,9 +87,26 @@
           <h2 class="text-white fw-bold">Nuestros productos!</h2>
         </div>
         <div class="row row-cols-1 row-cols-md-3" id="contenedor">
+          <div class="col mb-3">
+            <!-- <div class="card h-100 border-0 cuerp-card">
+              <div class="contenedor-img">
+              <img src="/" class="card-img-top" alt="...">
+              </div>
+              <div class="card-body ">
+                <h4 class="card-title text-white text-center">Titutlo</h4>
+              </div>
+              <div class="d-flex w-100 justify-content-between align-items-center p-2">
+              <div class="m-2 puntero">
+              <i class="fa-solid fa-cart-shopping fa-xl" style="color: #ffffff;"></i>
+              </div>
+              <div class="m-2" >
+              <h3 class="text-white">$99.999</h3>
+              </div>
+              </div>
+          </div> -->
         </div>
       </div>
-      
+ 
     </main>
     <footer></footer>
     <script
@@ -99,5 +116,6 @@
     ></script>
     <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
     <script src="/app.js"></script>
+    <script src="/js/global.js"></script>
   </body>
 </html>
