--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="container">
         <div class="row my-2 text-center">
-          <h2 class="text-white fw-bold">Nuestros productos!</h2>
+          <h2 class="text-white fw-bold">Nuestras ofertas <i class="fa-brands fa-shopify"></i></h2>
         </div>
         <div class="row row-cols-1 row-cols-md-3" id="contenedor">
           <div class="col mb-3">
