--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -39,10 +39,21 @@
       </header>
       <main>
         <div class="container">
-            <div class="mt-3">
-                <h2 class="text-center fw-bold text-white"></h2>
-            </div>
+          <div class="row mt-3">
+            <table class="table" id="contenedor-tabla">
+              <thead>
+                <tr class="mb-3">
+                <th scope="col"  class=" fs-4">Nombre</th>
+                <th scope="col" class=" fs-4">Producto</th>
+                <th scope="col" class="fs-4">Precio</th>
+                <th></th>
+                </tr>
+              </thead>
+              <tbody id="cuerpo-tabla">
 
+              </tbody>
+            </table>
+          </div>
         </div>
 
       </main>
@@ -55,8 +66,8 @@
     crossorigin="anonymous"
   ></script>
   <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
-  <script src="/app.js"></script>
   <script src="/js/global.js"></script>
   <script src="/js/carrito.js"></script>
+  
 </body>
 </html>
