--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container-fluid">
         <div class="col-12">
-          <div class="row-col-1 row-cols-sm-1 mt-4">
+          <div class="row-col-1 row-cols-sm-1 m-4">
             <div id="carouselExampleDark" class="carousel carousel-dark slide">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -51,22 +51,19 @@
                 <div class="carousel-item active" data-bs-interval="500">
                   <a href=""><img src="/img/1.jpg" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+
                   </div>
                 </div>
                 <div class="carousel-item active" data-bs-interval="1000">
                   <a href=""><img src="/img/2.jpg" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+
                   </div>
                 </div>
                 <div class="carousel-item">
                   <a href=""><img src="/img/3.jpg" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+
                   </div>
                 </div>
               </div>
@@ -80,9 +77,21 @@
               </button>
             </div>
           </div>
-
         </div>
-
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-3 g-4" id="contenedor">
+            <!-- <div class="col mb-3">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div> -->
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
