--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row my-2 text-center">
           <h2 class="text-white fw-bold">Nuestras ofertas <i class="fa-brands fa-shopify"></i></h2>
         </div>
-        <div class="row row-cols-1 row-cols-md-3" id="contenedor">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="contenedor">
           <div class="col mb-3">
             <!-- <div class="card h-100 border-0 cuerp-card">
               <div class="contenedor-img">
