--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -38,7 +38,7 @@
         </div>
       </header>
       <main>
-        <div class="container">
+        <div class="container" >
           <div class="row mt-3">
             <table class="table" id="contenedor-tabla">
               <thead>
@@ -54,12 +54,16 @@
               </tbody>
             </table>
           </div>
+          <div id="contenedor">
+            
+          </div>
         </div>
 
       </main>
       <footer>
 
       </footer>
+      
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -68,6 +72,5 @@
   <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
   <script src="/js/global.js"></script>
   <script src="/js/carrito.js"></script>
-  
 </body>
 </html>
