Fix pagina de carrito

--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -37,7 +37,7 @@
           <li><a href="" class="action-btn">Login</a></li>
         </div>
       </header>
-      <main>
+      <main id="main">
         <div class="container" >
           <div class="row mt-3">
             <table class="table" id="contenedor-tabla">
@@ -55,7 +55,7 @@
             </table>
           </div>
           <div id="contenedor">
-            
+
           </div>
         </div>
 
