--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -39,12 +39,12 @@
       </header>
       <main id="main">
         <div class="container" >
-          <div class="row mt-3">
+          <div class="row mt-3 p-2" id="row-tablas">
             <table class="table" id="contenedor-tabla">
               <thead>
                 <tr class="mb-3">
-                <th scope="col"  class=" fs-4">Nombre</th>
-                <th scope="col" class=" fs-4">Producto</th>
+                <th scope="col"  class=" fs-4">Producto</th>
+                <th scope="col" class=" fs-4">Nombre</th>
                 <th scope="col" class="fs-4">Precio</th>
                 <th></th>
                 </tr>
