--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous"
   ></script>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/carrito.css">
 </head>
 <body>
     <header>
@@ -38,7 +39,7 @@
         </div>
       </header>
       <main id="main">
-        <div class="container" >
+        <div class="container">
           <div class="row mt-3 p-2" id="row-tablas">
             <table class="table" id="contenedor-tabla">
               <thead>
@@ -50,12 +51,25 @@
                 </tr>
               </thead>
               <tbody id="cuerpo-tabla">
-
               </tbody>
             </table>
           </div>
-          <div id="contenedor">
+          <div id="total-content">
+            <div class="row">
 
+            </div>
+          </div>
+          <!-- <div class="w-100 d-flex justify-content-end">
+            <div class="d-block">
+              <div>
+                <h5 id="text-desc" style="color: orangered;" class="fw-bold">Total</h5>
+              </div>
+              <div id="total">
+                <p class="text-center mt-2">sdasd</p>
+              </div>
+            </div>
+          </div> -->
+          <div id="contenedor">
           </div>
         </div>
 
