--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -34,7 +34,7 @@
         <div class="dropdown_menu">
           <li><a href="">About us</a></li>
           <li><a href="">Administracion</a></li>
-          <li><a href="">Ver mi carrito</a></li>
+          <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
           <li><a href="" class="action-btn">Login</a></li>
         </div>
       </header>
