--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
       <div class="dropdown_menu">
         <li><a href="">About us</a></li>
         <li><a href="">Administracion</a></li>
-        <li><a href="">Ver mi carrito</a></li>
+        <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         <li><a href="" class="action-btn">Login</a></li>
       </div>
     </header>
+
     <main>
       <div class="container-fluid" id="carousel-fluid">
         <div class="col-12">
