Creacion del footer

--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -74,8 +74,50 @@
         </div>
 
       </main>
-      <footer>
-
+      <footer class="text-light py-2">
+        <div class="row">
+          <div class="col-sm-12 col-md-4 d-flex justify-content-center mt-3">
+            <div id="footerlogo">
+              <a href="index.html"
+                ><img
+                  src="/img/logo/logo-proyecto-2.png"
+                  alt="logo"
+                  width="100"
+              /></a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 text-center mt-4 cols-responsive">
+            <a href="https://www.facebook.com/Disney" target="_blank"
+              ><i
+                class="fa-brands fa-facebook fa-2xl m-4"
+                style="color: #fffcfc"
+              ></i
+            ></a>
+            <a href="https://www.instagram.com/feria.americana.tucuman?igsh=MTY4MDZjZzhjOGZvNg%3D%3D" target="_blank"
+              ><i
+                class="fa-brands fa-instagram fa-2xl m-4 "
+                style="color: #fffcfc"
+              ></i
+            ></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"
+              ><i
+                class="fa-brands fa-twitter fa-2xl m-4 "
+                style="color: #fffcfc"
+              ></i
+            ></a>
+            <br />
+            <span>&copy;Derechos reservados</span>
+          </div>
+          <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
+            <a class="foo" href="/Page/contacto.html"><h6>Contactanos</h6> </a>
+            <a class="foo" href="/Page/error404.html"
+              ><h6>Privacidad Y Legales</h6></a
+            >
+            <a class="foo" href="/Page/acercadenosotros.html"
+              ><h6>Acerca de Nosotros</h6></a
+            >
+          </div>
+        </div>
       </footer>
       
     <script
