--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         <li><a href="" class="action-btn">Login</a></li>
       </div>
     </header>
-
     <main>
       <div class="container-fluid" id="carousel-fluid">
         <div class="col-12">
-          <div class="row-col-1 row-cols-sm-1 m-4">
+          <div class="row-col-1 row-cols-sm-1 m-4 row-cols-md-1">
             <div id="carouselExampleDark" class="carousel carousel-dark slide">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
