Nuevos agregados en la pagina principal con las marcas y cambios de colores

--- a/index.html
+++ b/index.html
@@ -46,24 +46,27 @@
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
               <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="500">
+                <div class="carousel-item active" >
                   <a href=""><img src="/img/1.jpg" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-
                   </div>
                 </div>
-                <div class="carousel-item active" data-bs-interval="1000">
+                <div class="carousel-item active" >
                   <a href=""><img src="/img/2.jpg" class="d-block w-100" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <a href=""><img src="/img/3.jpg" class="d-block w-100" alt="..."></a>
+                <div class="carousel-item active">
+                  <a href=""><img src="/img/3.jpg" class="d-block w-100"  data-bs-interval="1500" alt="..."></a>
                   <div class="carousel-caption d-none d-md-block">
-
+                  </div>
+                </div>
+                <div class="carousel-item active">
+                  <a href=""><img src="/img/5.jpg" class="d-block w-100" alt="..." data-bs-interval="2000"></a>
+                  <div class="carousel-caption d-none d-md-block">
                   </div>
                 </div>
               </div>
@@ -79,9 +82,39 @@
           </div>
         </div>
       </div>
+      <section class="brand-section">
+        <div class="container">
+          <h2 style="color: white;" class="fw-bold">Nuestras Marcas</h2>
+          <div class="brand-grid">
+            <div class="brand-item">
+              <h4>AMD</h4>
+            </div>
+            <div class="brand-item">
+              <h4>INTEL</h4>
+            </div>
+            <div class="brand-item">
+              <h4>ASUS</h4>
+            </div>
+            <div class="brand-item">
+              <h4>NVIDA</h4>
+            </div>
+            <div class="brand-item">
+              <h4>KINSTON</h4>
+            </div>
+            <div class="brand-item">
+              <h4>GENESIS</h4>
+            </div>
+            <div class="brand-item">
+              <h4>MSI</h4>
+            </div>
+            
+            <!-- Añadir más marcas según sea necesario -->
+          </div>
+        </div>
+      </section>
       <div class="container">
         <div class="row my-2 text-center">
-          <h2 class="text-white fw-bold">Nuestras ofertas <i class="fa-brands fa-shopify"></i></h2>
+          <h2 class="fw-bold" style="color: white;" >Nuestras ofertas!</h2>
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="contenedor">
           <div class="col mb-3">
@@ -103,7 +136,6 @@
           </div> -->
         </div>
       </div>
- 
     </main>
     <footer class="text-light py-2">
       <div class="row">
