--- a/index.html
+++ b/index.html
@@ -82,32 +82,53 @@
           </div>
         </div>
       </div>
-      <section class="brand-section">
+      <section class="marcas-section">
         <div class="container">
           <h2 style="color: white;" class="fw-bold">Nuestras Marcas</h2>
-          <div class="brand-grid">
-            <div class="brand-item">
+          <div class="marcas-grid">
+
+            <a href="https://www.amd.com/es/products/processors/laptop/ryzen-for-business.html">
+            <div class="marcas-item">
               <h4>AMD</h4>
             </div>
-            <div class="brand-item">
+            </a>
+            
+
+            <a href="https://www.intel.la/content/www/xl/es/homepage.html">
+              <div class="marcas-item">
               <h4>INTEL</h4>
             </div>
-            <div class="brand-item">
-              <h4>ASUS</h4>
+            </a>
+
+            <a href="https://www.asus.com/ar/"> 
+            <div class="marcas-item">
+             <h4>ASUS</h4>
             </div>
-            <div class="brand-item">
+            </a>
+
+            <a href="https://www.nvidia.com/es-la/">
+            <div class="marcas-item">
               <h4>NVIDA</h4>
             </div>
-            <div class="brand-item">
+             </a>
+
+             <a href="https://www.kingston.com/latam">
+            <div class="marcas-item">
               <h4>KINSTON</h4>
             </div>
-            <div class="brand-item">
+            </a>
+
+            <a href="">
+            <div class="marcas-item">
               <h4>GENESIS</h4>
             </div>
-            <div class="brand-item">
+             </a>
+
+             <a href="https://latam.msi.com/index.php">
+            <div class="marcas-item">
               <h4>MSI</h4>
             </div>
-            
+             </a>
             <!-- Añadir más marcas según sea necesario -->
           </div>
         </div>
