--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -134,9 +134,6 @@
 
 
 <!--- Modal-->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Open modal for @mdo</button>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@fat">Open modal for @fat</button>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Open modal for @getbootstrap</button>
 <div
 class="modal fade"
 id="productoModal"
@@ -146,7 +143,8 @@ aria-hidden="true"
 >
 <div class="modal-dialog">
   <div class="modal-content">
-    <div class="modal-header">
+    <div class="modal-header bg-success">
+      <i class="fa-brands fa-paypal fa-xl mx-1"></i>
       <h1 class="modal-title fs-5" id="productoModalLabel">
         Proceso de pago 
       </h1>
@@ -155,10 +153,11 @@ aria-hidden="true"
         class="btn-close"
         data-bs-dismiss="modal"
         aria-label="Close"
-      ></button>
+      > 
+    </button>
     </div>
-    <div class="modal-body">
-      <form onsubmit="">
+    <div class="modal-body bg-transparent">
+      <form>
         <div class="row mb-2">
           <div class="col">
             <label>Nombre Titular de la tarjeta</label>
@@ -166,20 +165,20 @@ aria-hidden="true"
               type="text"
               class="form-control"
               required
-              id="tarjetamodal"
+              id="nombre-tarjeta"
             />
             <p class="text-muted">Debe estar escrito igual que en la tarjeta</p>
           </div>
         </div>
         <div class="row mb-2">
           <div class="col">
-            <label for="numerosModal">Numero de la tarjeta</label>
+            <label for="numeroDeTarjeta">Numero de la tarjeta</label>
             <input
-            type="password"
+            type="text"
             class="form-control"
             required
-            id="numerosModal"
-            placeholder="1234 1234 1234"
+            id="numeroDeTarjeta"
+            placeholder="123412341234"
           />
           </div>
         </div>
@@ -191,7 +190,7 @@ aria-hidden="true"
               class="form-control"
               maxlength="5"
               required
-              id="precioModal"
+              id="caducidadTarjeta"
               placeholder="dd/mm"
             />
           </div>
@@ -201,8 +200,7 @@ aria-hidden="true"
               type="text"
               class="form-control"
               required
-              id="imagenModal"
-              maxlength="3"
+              id="codigoTarjeta"
               placeholder="CVC"
             />
           </div>
@@ -230,7 +228,7 @@ aria-hidden="true"
         </div>
         <div class="row">
           <div class="col d-flex justify-content-end">
-            <button class="btn btn-dark" onsubmit="eliminarTodo(event)">Guardar</button>
+            <input type="submit" class="btn btn-success" value="Pagar">
           </div>
         </div>
       </form>
