--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -183,9 +183,9 @@
               </select>
             </div>
           </div>
-          <div class="row">
+          <div class="row" id="row-modal">
             <div class="col d-flex justify-content-end">
-              <button type="submit" class="btn btn-success" >Pagar</button>
+              <button type="submit" class="btn btn-success" id="pagarBtn">Pagar</button>
             </div>
           </div>
         </form>
