--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -132,7 +132,6 @@
 </html>
 
 
-
 <!--- Modal-->
 
 <div class="modal fade" id="productoModal" tabindex="-1" aria-labelledby="productoModalLabel" aria-hidden="true">
@@ -185,7 +184,7 @@
           </div>
           <div class="row" id="row-modal">
             <div class="col d-flex justify-content-end">
-              <button type="submit" class="btn btn-success" id="pagarBtn">Pagar</button>
+              <button type="sub" class="btn btn-success" id="pagarBtn">Pagar</button>
             </div>
           </div>
         </form>
