--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -143,7 +143,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body bg-transparent">
-        <form id="paymentForm">
+        <form id="form-pago">
           <div class="row mb-2">
             <div class="col">
               <label>Nombre Titular de la tarjeta</label>
