--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
           <span>&copy;Derechos reservados</span>
         </div>
         <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
-          <a class="foo" href="/Page/contacto.html"><h6>Contactanos</h6> </a>
-          <a class="foo" href="/Page/error404.html"
-            ><h6>Privacidad Y Legales</h6></a
+          <a  href="/Page/contacto.html"><h5  class = "infoFoot">Contactanos</h5> </a>
+          <a  href="/Page/error404.html"
+            ><h5  class = "infoFoot">Privacidad Y Legales</h5></a
           >
           <a class="foo" href="/Page/acercadenosotros.html"
-            ><h6>Acerca de Nosotros</h6></a
+            ><h5  class = "infoFoot">Acerca de Nosotros</h5></a
           >
         </div>
       </div>
