--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="navbar">
         <div class="logo"> <a href="/index.html"><img src="/img/logo/logo-proyecto-2.png" alt="" /></a></div>
         <ul class="links">
-          <li><a href="" class="info">About us</a></li>
-          <li><a href="" class="info">Administracion</a></li>
-          <li><a href="/pages/Carrito.html" class="info">Ver mi carrito</a></li>
+          <li><a href="">Nosotros</a></li>
+          <li><a href="/pages/administracion.html">Administracion</a></li>
+          <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
         <a href="" class="action-btn">Login</a>
         <div class="toggle-btn" onclick="openMenu()">
