--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechTuch</title>
+    <title>TechTuch-Carrito</title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -22,9 +22,9 @@
         <div class="navbar">
           <div class="logo"><a href="/index.html"><img src="/img/logo/logo-proyecto-2.png" alt="" /></a></div>
           <ul class="links">
-            <li><a href="" class="info">About us</a></li>
-            <li><a href="" class="info">Administracion</a></li>
-            <li><a href="" class="info">Ver mi carrito</a></li>
+            <li><a href="">Nosotros</a></li>
+            <li><a href="/pages/administracion.html">Administracion</a></li>
+            <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
           </ul>
           <a href="" class="action-btn">Login</a>
           <div class="toggle-btn" onclick="openMenu()">
@@ -109,12 +109,12 @@
             <span>&copy;Derechos reservados</span>
           </div>
           <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
-            <a class="foo" href="/Page/contacto.html"><h5>Contactanos</h5> </a>
+            <a class="foo" href="/Page/contacto.html"><h4>Contactanos</h4> </a>
             <a class="foo" href="/Page/error404.html"
-              ><h5>Privacidad Y Legales</h5></a
+              ><h4>Privacidad Y Legales</h4></a
             >
             <a class="foo" href="/Page/acercadenosotros.html"
-              ><h5>Acerca de Nosotros</h5></a
+              ><h4>Acerca de Nosotros</h4></a
             >
           </div>
         </div>
