Arreglo de la funcion de agregado con la funcion de precios

--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -99,6 +99,7 @@
                                     <option value="Pasta-termica">Pasta termica</option>
                                     <option value="controles">Controles</option>
                                     <option value="Fuente"> Fuentes</option>
+                                    <option value="Notebooks">Notebooks</option>
                                 </select>
                             </div>
                         </div>
