--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
               <h4>MSI</h4>
             </div>
              </a>
-            <!-- Añadir más marcas según sea necesario -->
           </div>
         </div>
       </section>
@@ -137,24 +136,12 @@
         <div class="row my-2 text-center">
           <h2 class="fw-bold" style="color: white;" >Nuestras ofertas!</h2>
         </div>
+        <div class="d-flex justify-content-between">
+          <div class="contenedor-filtros"><button type="submit" onclick="ordenarPorPrecio()" class="btn boton-filtros" >Ordenar por precio</button></div>
+          <div class="contenedor-filtros"><button type="button" onclick="ordernarAlfabeticamente()" class="btn boton-filtros">Ordenar por nombre</button></div>
+        </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="contenedor">
           <div class="col mb-3">
-            <!-- <div class="card h-100 border-0 cuerp-card">
-              <div class="contenedor-img">
-              <img src="/" class="card-img-top" alt="...">
-              </div>
-              <div class="card-body ">
-                <h4 class="card-title text-white text-center">Titutlo</h4>
-              </div>
-              <div class="d-flex w-100 justify-content-between align-items-center p-2">
-              <div class="m-2 puntero">
-              <i class="fa-solid fa-cart-shopping fa-xl" style="color: #ffffff;"></i>
-              </div>
-              <div class="m-2" >
-              <h3 class="text-white">$99.999</h3>
-              </div>
-              </div>
-          </div> -->
         </div>
       </div>
     </main>
