Comienzo de estructura login

--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -133,10 +133,10 @@
    <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
    <script src="/js/global.js"></script>
    <script src="/js/admin.js"></script>
+   <script src="/js/login.js"></script>
 </body>
 </html>
  
-<!---------------------------------------------------------- MODAL AgregarProducto ------------------------------------- -->
 <div class="modal fade" id="modalAdmin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -206,9 +206,6 @@
     </div>
   </div>
 </div>
-
-
-
 <div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
