--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -128,6 +128,7 @@
   <script src="https://kit.fontawesome.com/82f0997eec.js" crossorigin="anonymous"></script>
   <script src="/js/global.js"></script>
   <script src="/js/carrito.js"></script>
+  <script src="/js/login.js"></script>
 </body>
 </html>
 
