funcion para que el administrador sea enviado a administracion

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <div class="row mb-2">
             <div class="col">
               <label for="Nombre" class="fw-bold">Ingrese su nombre de usuario</label>
-              <input type="text" id="nombre_usuario" class="form-control" required placeholder="pepe_1234">
+              <input type="text" id="nombre_usuarioL" class="form-control" required placeholder="pepe_1234">
             </div>
           </div>
           <div class="row ">
@@ -271,7 +271,7 @@
             </div>
             <div class="col">
               <label for="mail" class="fw-bold">Ingrese su nombre de usuario</label>
-              <input type="mail" id="nombre_usuarioL" required class="form-control"   placeholder="pepito1234">
+              <input type="mail" id="nombre_usuario" required class="form-control"   placeholder="pepito1234">
              
             </div>
           </div>
